--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: Nighthawk Pages
 description: "Class of 2025"
 owner_name: John Mortensen
 github_username: nighthawkcoders
-github_repo: "student_2025" 
-baseurl: "/student_2025"
+github_repo: "gabi_2025" 
+baseurl: "/gabi_2025"
 future: true
 remote_theme: jekyll/minima
 minima:
@@ -24,3 +24,4 @@ header_pages:
   - navigation/search.md
   - navigation/about.md
   - README4YML.md
+  - navigation/tools.md
