--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ github_username: nighthawkcoders
 github_repo: "gabi_2025" 
 baseurl: "/gabi_2025"
 future: true
-remote_theme: jekyll/minima
+# remote_theme: jekyll/minima
 minima:
   skin: dark
   social_links:
@@ -13,7 +13,7 @@ minima:
     - { platform: x, user_url: "https://x.com/NighthawkCoding/" }
     - { platform: youtube, user_url: "https://www.youtube.com/@nighthawkcodingsociety2868" } 
 # remote_theme: pages-themes/midnight@v0.2.0
-# remote_theme: pages-themes/cayman@v0.2.0
+remote_theme: pages-themes/cayman@v0.2.0
 # remote_theme: pages-themes/dinky@v0.2.0
 # remote_theme: pages-themes/minima@v0.2.0
 # remote_theme: pages-themes/time-machine@v0.2.0
@@ -26,3 +26,4 @@ header_pages:
   - navigation/about.md
   - README4YML.md
   - navigation/tools.md
+
