--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -28,12 +28,21 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Install dependencies
         run: |
           pip install nbconvert
           # Add any other necessary package installations here
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-artifact
+          path: ./build/ 
       - name: Execute conversion script
         run: python scripts/convert_notebooks.py
       - name: Build with Jekyll
