--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Nighthawk Pages 
 description: "Class of 2025"
-owner_name: John Mortensen
+owner_name: Gabriela Connelly
 github_username: nighthawkcoders
 github_repo: "gabi_2025" 
 baseurl: "/gabi_2025"
