adding documents to header page

--- a/_config.yml
+++ b/_config.yml
@@ -26,4 +26,7 @@ header_pages:
   - navigation/about.md
   - README4YML.md
   - navigation/tools.md
+  - navigation/projects.md
+  - navigation/interests.md
+  - navigation/college_board.md
 
