adding blog reflection

--- a/_config.yml
+++ b/_config.yml
@@ -29,4 +29,5 @@ header_pages:
   - navigation/projects.md
   - navigation/interests.md
   - navigation/college_board.md
+  - navigation/blog_reflection.md
 
